fixed dynamic wrapping on skills buttons

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1042,7 +1042,7 @@ header {
 .technologies-slide-in-window {
     position: absolute;
     left: -200%;
-    width: 80%;
+    width: 90%;
     /*max-width: 500px;*/
     /*height: 100%;*/
     min-height: 300px;
@@ -1063,7 +1063,7 @@ header {
 
 .technologies-slide-in-window.visible {
     top: 200px;
-    left: 120px;
+    left: 20px;
 }
 /******************
     top divider
@@ -1160,9 +1160,10 @@ section span.animated-title {
 .technology-categories {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 15px;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .technology-categories a {
